# miden-base

./: .gitmodules  .release-plz-dry-run.toml  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  _typos.toml  clippy.toml  deny.toml  deny.toml~
crates/miden-lib/: CHANGELOG.md  Cargo.toml  build.rs
crates/miden-lib/asm/account_components/: array.masm  aux_wallet.masm  basic_fungible_faucet.masm  basic_wallet.masm  ecdsa_k256_keccak.masm  ecdsa_k256_keccak_acl.masm  ecdsa_k256_keccak_multisig.masm  multisig_ecdsa_k256_keccak.masm  multisig_rpo_falcon_512.masm  network_fungible_faucet.masm  no_auth.masm  rpo_falcon_512.masm  rpo_falcon_512_acl.masm  rpo_falcon_512_conditional.masm  rpo_falcon_512_multisig.masm  rpo_falcon_512_procedure_acl.masm
crates/miden-lib/asm/agglayer/account_components/: agglayer_faucet.masm  asset_conversion.masm  bridge_in.masm  bridge_out.masm  global_exit_tree.masm  local_exit_tree.masm
crates/miden-lib/asm/agglayer/collections/: mmr_frontier32.masm  mmr_frontier32_keccak.masm
crates/miden-lib/asm/agglayer/note_scripts/: B2AGG.masm  CLAIM.masm  UPDATE_GER.masm
crates/miden-lib/asm/kernels/transaction/: api.masm  main.masm  tx_script_main.masm
crates/miden-lib/asm/kernels/transaction/lib/: account.masm  account_delta.masm  asset.masm  asset_vault.masm  constants.masm  current_note.masm  epilogue.masm  (+10 more)
crates/miden-lib/asm/miden/: account.masm  active_account.masm  active_note.masm  asset.masm  auth.masm  current_note.masm  input_note.masm  input_notes.masm  kernel_proc_offsets.masm  native_account.masm  note.masm  output_note.masm  output_notes.masm  tx.masm
crates/miden-lib/asm/miden/auth/: ecdsa_k256_keccak.masm  mod.masm  multisig.masm  rpo_falcon512.masm
crates/miden-lib/asm/note_scripts/: BURN.masm  IF_SWAP.masm  MINT.masm  P2ID.masm  P2IDE.masm  P2IDH.masm  P2IDR.masm  P2ID_RT.masm  SWAP.masm
crates/miden-lib/asm/shared_modules/: account_id.masm
crates/miden-lib/asm/shared_utils/util/: note.masm
crates/miden-lib/src/: auth.rs  lib.rs  standards_lib.rs
crates/miden-lib/src/account/: array.rs  mod.rs
crates/miden-lib/src/account/auth/: ecdsa_k256_keccak.rs  ecdsa_k256_keccak_acl.rs  ecdsa_k256_keccak_multisig.rs  mod.rs  no_auth.rs  public_key_commitment.rs  rpo_falcon_512.rs  rpo_falcon_512_acl.rs  rpo_falcon_512_multisig.rs
crates/miden-lib/src/account/components/: mod.rs
crates/miden-lib/src/account/faucets/: basic_fungible.rs  mod.rs  network_fungible.rs
crates/miden-lib/src/account/interface/: component.rs  extension.rs  mod.rs  test.rs
crates/miden-lib/src/account/wallets/: mod.rs
crates/miden-lib/src/agglayer/: mod.rs  utils.rs
crates/miden-lib/src/block/: errors.rs  header.rs  mod.rs  sign.rs
crates/miden-lib/src/code_builder/: mod.rs
crates/miden-lib/src/errors/: account_component_builder_errors.rs  code_builder_errors.rs  mod.rs  note_script_errors.rs  protocol.rs  protocol_assembler_errors.rs  script_builder_errors.rs  standards.rs  transaction_errors.rs  tx_kernel_errors.rs
crates/miden-lib/src/note/: mint_inputs.rs  mod.rs  utils.rs  well_known_note.rs
crates/miden-lib/src/testing/: account.rs  account_interface.rs  mock_account.rs  mock_account_code.rs  mock_util_lib.rs  mod.rs  note.rs
crates/miden-lib/src/testing/account_component/: conditional_auth.rs  incr_nonce.rs  mock_account_component.rs  mock_faucet_component.rs  mod.rs
crates/miden-lib/src/transaction/: events.rs  inputs.rs  kernel_procedures.rs  memory.rs  mod.rs  outputs.rs  tx_event_id.rs
crates/miden-lib/src/transaction/kernel_procedures/: mod.rs  procedures.rs
crates/miden-lib/src/transaction/procedures/: kernel_v0.rs
crates/miden-lib/src/utils/: account_component_builder.rs  code_builder.rs  mod.rs  protocol_assembler.rs  script_builder.rs
crates/miden-macros/: Cargo.toml  MIGRATION_GUIDE.md  PR_SUMMARY.md  README.md  REFACTORING_EXAMPLE.md
crates/miden-macros/src/: lib.rs
crates/miden-macros/tests/: integration_test.rs
crates/miden-testing/: Cargo.toml
crates/miden-testing/src/: executor.rs  lib.rs  mock_host.rs  utils.rs
crates/miden-testing/src/kernel_tests/: mod.rs
crates/miden-testing/src/kernel_tests/batch/: proposed_batch.rs  proven_tx_builder.rs  test_prologue.rs
crates/miden-testing/src/kernel_tests/block/: header_errors.rs  mod.rs  proposed_block_errors.rs  proposed_block_success.rs  proven_block_error.rs  proven_block_success.rs  utils.rs
crates/miden-testing/src/kernel_tests/standards/: mod.rs  test_network_account_target.rs
crates/miden-testing/src/kernel_tests/tx/: mod.rs  test_account.rs  test_account_delta.rs  test_account_interface.rs  test_active_note.rs  test_array.rs  test_asset.rs  test_asset_vault.rs  test_auth.rs  test_epilogue.rs  test_faucet.rs  test_fee.rs  test_fpi.rs  test_input_note.rs  test_lazy_loading.rs  test_link_map.rs  test_note.rs  test_output_note.rs  test_prologue.rs  test_tx.rs
crates/miden-testing/src/mock_chain/: auth.rs  chain.rs  chain_builder.rs  mod.rs  note.rs  proven_tx_ext.rs
crates/miden-testing/src/standards/: mod.rs  network_account_target.rs
crates/miden-testing/src/tx_context/: builder.rs  context.rs  error.rs  errors.rs  mod.rs
crates/miden-testing/tests/: lib.rs
crates/miden-testing/tests/agglayer/: asset_conversion.rs  bridge_in.rs  bridge_out.rs  crypto_utils.rs  global_index.rs  mmr_frontier.rs  mod.rs  solidity_miden_address_conversion.rs  test_utils.rs  testing_utils.rs  update_ger.rs
crates/miden-testing/tests/auth/: ecdsa_acl.rs  ecdsa_multisig.rs  mod.rs  multisig.rs  rpo_falcon_acl.rs  rpo_falcon_procedure_acl.rs
crates/miden-testing/tests/integration/auth/: mod.rs  rpo_falcon_procedure_acl.rs
crates/miden-testing/tests/integration/scripts/: faucet.rs  hybrid_p2id.rs  in_flight_swap.rs  mod.rs  p2id.rs  p2ide.rs  p2idh.rs  p2idr.rs  send_note.rs  swap.rs
crates/miden-testing/tests/scripts/: faucet.rs  fee.rs  mod.rs  ownable2step.rs  p2id.rs  p2ide.rs  send_note.rs  swap.rs
crates/miden-testing/tests/standards/: network_account_target.rs
crates/miden-testing/tests/wallet/: mod.rs
(+594 files in other folders)
