[workspace]
members = [
  "bin/bench-note-checker",
  "bin/bench-transaction",
  "crates/miden-block-prover",
  "crates/miden-protocol",
  "crates/miden-protocol-macros",
  "crates/miden-standards",
  "crates/miden-testing",
  "crates/miden-tx",
  "crates/miden-tx-batch-prover",
]
resolver = "3"

[workspace.package]
authors      = ["Miden contributors"]
edition      = "2024"
exclude      = [".github/"]
homepage     = "https://miden.xyz"
license      = "MIT"
repository   = "https://github.com/0xMiden/miden-base"
rust-version = "1.90"
version      = "0.13.0"

[profile.release]
codegen-units = 1
lto           = true

[profile.test-dev]
inherits  = "dev"
opt-level = 1

[profile.bench]
codegen-units = 1
lto           = true

[workspace.dependencies]
# Workspace crates
miden-block-prover    = { default-features = false, path = "crates/miden-block-prover", version = "0.13" }
miden-protocol        = { default-features = false, path = "crates/miden-protocol", version = "0.13" }
miden-protocol-macros = { default-features = false, path = "crates/miden-protocol-macros", version = "0.13" }
miden-standards       = { default-features = false, path = "crates/miden-standards", version = "0.13" }
miden-testing         = { default-features = false, path = "crates/miden-testing", version = "0.13" }
miden-tx              = { default-features = false, path = "crates/miden-tx", version = "0.13" }
miden-tx-batch-prover = { default-features = false, path = "crates/miden-tx-batch-prover", version = "0.13" }

# Miden dependencies
miden-air             = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-assembly        = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-assembly-syntax = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-core            = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-core-lib        = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-crypto          = { default-features = false, version = "0.20.1" }
miden-mast-package    = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-processor       = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-prover          = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-utils-sync      = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }
miden-verifier        = { branch = "al-migrate-p3-ver2", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm" }

# External dependencies
anyhow         = { default-features = false, features = ["backtrace", "std"], version = "1.0" }
assert_matches = { default-features = false, version = "1.5" }
rand           = { default-features = false, version = "0.9" }
rand_chacha    = { default-features = false, version = "0.9" }
rstest         = { version = "0.26" }
thiserror      = { default-features = false, version = "2.0" }
tokio          = { default-features = false, features = ["sync"], version = "1" }
