[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Standard library of the Miden protocol"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["kernel", "miden", "transaction"]
license.workspace      = true
name                   = "miden-lib"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]

[features]
default = ["std"]
std     = ["miden-assembly/std", "miden-core-lib/std", "miden-objects/std", "miden-processor/std"]
testing = ["dep:rand", "miden-assembly/testing", "miden-objects/testing"]

[dependencies]
# Miden dependencies
miden-core      = { workspace = true }
miden-core-lib  = { workspace = true }
miden-objects   = { workspace = true }
miden-processor = { workspace = true }

# External dependencies
rand      = { optional = true, workspace = true }
thiserror = { workspace = true }

[build-dependencies]
fs-err         = { version = "3" }
miden-assembly = { workspace = true }
miden-core     = { workspace = true }
miden-core-lib = { workspace = true }
regex          = { version = "1.11" }
walkdir        = { version = "2.5" }

[dev-dependencies]
anyhow          = "1.0"
assert_matches  = { workspace = true }
miden-objects   = { features = ["testing"], workspace = true }
miden-processor = { features = ["testing"], workspace = true }
