[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Miden protocol testing tools"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "mock", "test"]
license.workspace      = true
name                   = "miden-testing"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.11.0"

[features]
async = ["miden-tx/async", "winter-maybe-async/async"]
std   = ["miden-lib/std"]

[dependencies]
# Workspace dependencies
miden-block-prover = { features = ["testing"], workspace = true }
miden-lib          = { features = ["testing"], workspace = true }
miden-objects      = { features = ["testing"], workspace = true }
miden-tx           = { features = ["testing"], workspace = true }

# Miden dependencies
vm-processor = { workspace = true }

# External dependencies
anyhow             = { version = "1.0", default-features = false }
async-trait        = "0.1"
rand               = { workspace = true, features = ["os_rng", "small_rng"] }
rand_chacha        = { version = "0.9", default-features = false }
thiserror          = { workspace = true }
winter-maybe-async = { version = "0.13" }
winterfell         = { version = "0.13" }

[dev-dependencies]
anyhow            = { version = "1.0", features = ["backtrace", "std"] }
assert_matches    = { workspace = true }
miden-objects     = { workspace = true, features = ["std"] }
winter-rand-utils = { version = "0.13" }

[package.metadata.cargo-machete]
# cargo machete flags async-trait as unused but it is used by winter-maybe-async with the async feature
ignored = ["async-trait"]
